--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+#root {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .App-logo {
